--- a/src/app/tab3/tab3.page.html
+++ b/src/app/tab3/tab3.page.html
@@ -6,4 +6,6 @@
   </ion-toolbar>
 </ion-header>
 
-<ion-content></ion-content>
+<ion-content padding>
+  <ion-button routerLink="/tabs/tab3/profile" routerDirection="forward">Profile</ion-button>
+</ion-content>
