Added demos :sparkles:

--- a/src/app/global-page-one/global-page-one.page.html
+++ b/src/app/global-page-one/global-page-one.page.html
@@ -11,4 +11,8 @@
   </ion-toolbar>
 </ion-header>
 
-<ion-content padding></ion-content>
+<ion-content padding>
+  <ion-button routerLink="/global-page-two" routerDirection="forward">
+    Global Page Two
+  </ion-button>
+</ion-content>
