--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -13,4 +13,7 @@
   <ion-button [routerLink]="['/global-page-one', {p: currentRoute}]" routerDirection="forward">
     Global Page One
   </ion-button>
+  <ion-button routerLink="/global-page-two" routerDirection="forward">
+    Global Page Two
+  </ion-button>
 </ion-content>
