--- a/src/app/tab2/tab2.page.html
+++ b/src/app/tab2/tab2.page.html
@@ -7,5 +7,13 @@
 </ion-header>
 
 <ion-content padding>
-  <ion-button routerLink="/tabs/tab2/profile" routerDirection="forward">Profile</ion-button>
+  <ion-button routerLink="/tabs/tab2/profile" routerDirection="forward">
+    Profile
+  </ion-button>
+  <ion-button [routerLink]="['/global-page-one', {p: currentRoute}]" routerDirection="forward">
+    Global Page One
+  </ion-button>
+  <ion-button routerLink="/global-page-two" routerDirection="forward">
+    Global Page Two
+  </ion-button>
 </ion-content>
